--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>3D Room Designer</h1>
     <div class="toolbar">
       <select id="modelSelect"></select>
- <option value="models/sofa.glb">Mebel: Sofa</option>
+ <option value="models/sofa.glb">Mebel: Shkaf</option>
         <option value="models/armchair.glb">Mebel: Kreslo</option>
         <option value="models/table.glb">Mebel: Stol</option>
-        <option value="models/coffee_table.glb">Mebel: Choyxo‘rlik stoli</option>
+        <option value="models/coffee_table.glb">Mebel: Choyxo'rlik stoli</option>
         <option value="models/bed.glb">Mebel: Krovat</option>
         <option value="models/wardrobe.glb">Mebel: Shkaf</option>
         <option value="models/dresser.glb">Mebel: Komod</option>
@@ -36,7 +36,8 @@
         <option value="models/sink_bath.glb">Vanna: Rakovina</option>
         <option value="models/door.glb">Arxitektura: Eshik</option>
         <option value="models/window.glb">Arxitektura: Oyna</option>
-      </select>
+        <option value="models/window.glb">Arxitektura: Tikuv mashinasi</option>
+    </select>
 
     <button id="addBtn">Qo'shish</button>
       <button id="modeTranslate" class="mode active">Surish</button>
